--- a/web/index.html
+++ b/web/index.html
@@ -11,7 +11,7 @@
     For more details:
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
   -->
-  <base href="/">
+  <base href="/iconsax_preview/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -23,7 +23,10 @@
   <meta name="apple-mobile-web-app-title" content="icon_test">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>icon_test</title>
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="favicon.png"/>
+
+  <title>IconSax Preview</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
